[gd_scene load_steps=10 format=3 uid="uid://bhe3nreata55x"]

[ext_resource type="Script" path="res://resource/organs/trigger_organ/light_organ.gd" id="1_1818n"]
[ext_resource type="Shader" path="res://shaders/hight_light.gdshader" id="2_c2wkp"]
[ext_resource type="Script" path="res://scripts/tool/deer_polygon.gd" id="3_6k1kl"]

[sub_resource type="Gradient" id="Gradient_pqw18"]
offsets = PackedFloat32Array(0.333333, 0.719101)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t57fv"]
gradient = SubResource("Gradient_pqw18")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u606t"]
shader = ExtResource("2_c2wkp")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_progress = 0.0
shader_parameter/shine_size = 0.1
shader_parameter/shine_angle = 45.0
shader_parameter/is_up_and_down = true
shader_parameter/amplitude = 32.0
shader_parameter/speed = 0.75

[sub_resource type="Gradient" id="Gradient_7uw8b"]
colors = PackedColorArray(1, 1, 1, 0.784314, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7bcqo"]
gradient = SubResource("Gradient_7uw8b")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_wmfnh"]
radius = 196.003

[node name="LightOrgan" type="CharacterBody2D"]
collision_layer = 32
script = ExtResource("1_1818n")
organ_name = "灯"
organ_desc = "玩家进入范围后可以交互点亮
点亮需要消耗玩家自身的亮度
点亮后会将玩家的体力恢复翻倍"
organ_texture = SubResource("GradientTexture2D_t57fv")

[node name="Light" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_u606t")
texture = SubResource("GradientTexture2D_t57fv")
texture_offset = Vector2(32, 32)
polygon = PackedVector2Array(24, 0, 20.7846, 12, 12, 20.7846, 1.46953e-15, 24, -12, 20.7846, -20.7846, 12, -24, 2.93906e-15, -20.7846, -12, -12, -20.7846, -4.40858e-15, -24, 12, -20.7846, 20.7846, -12)
script = ExtResource("3_6k1kl")
polygon_edge = 12
polygon_length = 24.0

[node name="PointLight2D" type="PointLight2D" parent="Light"]
color = Color(1, 1, 1, 0.458824)
energy = 0.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_7bcqo")
texture_scale = 1.5

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wmfnh")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
